# kochen

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  readme.md  setup.py  test.py
.github/workflows/: release.yml
boiler/: __init__.py  common.py  datautil.py  importutil.py  logging.py  mathutil.py  misc.py  pathutil.py  plotutil.py  scriptutil.py  template.py  versioning.py
boiler/demo/: 2dcolorbar.py  colorgrid.py
boiler/devices/: __init__.py
boiler/devices/motor/: motor_interface.py  motordriver.py
boiler/devices/timestamp/: freqdetune.py
boiler/legacy/: legacy.py
boiler/recipe/: ansi.py
boiler/recipes/: math.py
boiler/templates/: boiler.py  default.py
boiler/v1/: __init__.py  importutil.py  mathutil.py  plotutil.py
docs/: architecture.md  design.md  developer.md  ipcutil.md  research.md  versioning.md
scripts/profile/execution/: .gitignore  profiler.py
scripts/profile/importtime/: main.py  script.sh
src/kochen/: __init__.py  common.py  datautil.py  fitutil.py  ipcutil.py  logging.py  mathutil.py  misc.py  plotutil.py  prototyping.py  scriptutil.py  template.py  versioning.py
src/kochen/datautil/: __init__.py  deprec.py  latest.py
src/kochen/demo/: colorgrid.py  ipcutil_usage.py  live_plotter.py  sign_csr.py
src/kochen/devices/: __init__.py
src/kochen/devices/motor/: motor_interface.py  motorcontroller.py
src/kochen/fitutil/: __init__.py  deprec.py  latest.py
src/kochen/lib/: typing.py
src/kochen/mathutil/: deprec.py  latest.py
src/kochen/psutil/: latest.py
src/kochen/recipe/: plotutil.py
src/kochen/sampleutil/: __init__.py  deprec.py  latest.py
src/kochen/templates/: boiler.py  kochen.py
src/scribbles/: __init__.py  common.py  mathutil.py
src/scribbles/devices/: motordriver.py
src/scribbles/patches/: matplotlib_legend_valigntext_top.patch
tests/: test_basic.py  test_imports.py  test_versioning.py
tests/datautil/: test_filecache.py  test_load.py
tests/subfolder/: test_versioning_helper.py
tests/versioning/: __init__.py  conftest.py  test_deprecation.py  test_repl.py  test_version_parsing.py  test_version_search.py  test_versioning.py
tests/versioning/mock_package/: test_mock_module1.py  test_mock_module2.py
tests/versioning/somedir/: test_versioning_helper.py
