[project]
name = "kochen"
version = "0.2024.1"
description = "A compilation of boilerplate scribbles"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-2.0-or-later"
authors = [
  { name = "Justin Peh Yu Xiang", email = "pehyuxiang@gmail.com" },
]
keywords = [
  "script", "boilerplate", "recipe",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy",
  "sortedcontainers",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "build",
  "twine",
  "pkginfo",  # see: https://github.com/pypi/warehouse/issues/15611
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
