[project]
name = "kochen"
dynamic = ["version"]
description = "A compilation of boilerplate scribbles"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-2.0-or-later"
authors = [
  { name = "Justin Peh Yu Xiang", email = "pehyuxiang@gmail.com" },
]
keywords = [
  "script", "boilerplate", "recipe",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy",
  "sortedcontainers",
  "typing_extensions",
  "polars",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.hatch.version]
source = "versioningit"

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.ruff.lint]
ignore = [
  "F811",  # redefinitions expected for back-compatibility
]
