[project]
name = "kochen"
dynamic = ["version"]
description = "A compilation of boilerplate scribbles"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-2.0-or-later"
authors = [
  { name = "Justin Peh Yu Xiang", email = "pehyuxiang@gmail.com" },
]
keywords = [
  "script", "boilerplate", "recipe",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "configargparse",
  "sortedcontainers",
  "typing_extensions",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

# Submodule dependencies
datautil = ["numpy", "polars", "tqdm"]
fitutil = ["numpy"]
mathutil = ["numpy", "scipy", "uncertainties"]
plotutil = ["matplotlib"]
all = [
  "kochen[datautil]",
  "kochen[fitutil]",
  "kochen[mathutil]",
  "kochen[plotutil]",
]

[tool.hatch.version]
source = "versioningit"

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.ruff]
extend-exclude = ["src/kochen/recipe"]

[tool.ruff.lint]
ignore = [
  "F811",  # redefinitions expected for back-compatibility
]

[tool.pyright]
include = ["src"]
exclude = ["src/kochen/recipe"]
typeCheckingMode = "standard"
reportRedeclaration = false
